--- a/auth.html
+++ b/auth.html
@@ -4,10 +4,12 @@
 		<meta charset="utf-8"> 
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'/>
-		<title>IMP | Integrated Container System</title>
 		<meta name="keywords" content="Container, Logistic, Container Repair">
 		<meta name="description" content="">
-		<meta name="author" content="">  
+		<meta name="author" content="PT. Indo Makmur Pratama">  
+		
+		<title>IMP | Integrated Container System</title>
+
 		<link href="asset/styles/login.css" rel="stylesheet" type="text/css" media="all" />
 		<link rel="shortcut icon" href="gallery/office.png" type="image/x-icon" />
 	</head>
