--- a/auth.html
+++ b/auth.html
@@ -13,17 +13,19 @@
 		<link href="asset/styles/login.css" rel="stylesheet" type="text/css" media="all" />
 		<link rel="shortcut icon" href="gallery/office.png" type="image/x-icon" />
 	</head>
+	
 	<body class="bgimg">
-		<div class="wrapper">
-			<div id="introblocks">
-				<form class="login" method="post" action="e-imp/validation_access">
-					<span>Integrated Container System</span>
-					<h1>PT. Indo Makmur Pratama</h1>
-					<input type="text" placeholder="Username" id="username" name="username" autofocus />  
-					<input type="password" placeholder="password" id="password" name="password" />  
-					<input type="submit" value="Sign In" />
-				</form>
-			</div>	
-		</div>
+	
+<div class="login-page">
+    <form class="login-form">
+      <input type="text" placeholder="username"/>
+      <input type="password" placeholder="password"/>
+      <button>login</button>
+    </form>
+  </div>
+</div>
+
 	</body>
+
+	
 </html>
