--- a/auth.html
+++ b/auth.html
@@ -14,17 +14,15 @@
 		<link rel="shortcut icon" href="gallery/office.png" type="image/x-icon" />
 	</head>
 	
-	<body class="bgimg">
+	<body>
 	
-<div class="login-page">
-    <form class="login-form">
-      <input type="text" placeholder="username"/>
-      <input type="password" placeholder="password"/>
-      <button>login</button>
-    </form>
-  </div>
-</div>
-
+		<div class="login-page">
+			<form class="login-form">
+				<input type="text" placeholder="username"/>
+				<input type="password" placeholder="password"/>
+				<button>login</button>
+			</form>
+		</div>
 	</body>
 
 	
