--- a/auth.html
+++ b/auth.html
@@ -16,18 +16,13 @@
 	
 	<body>
 	
-		<section class="login-form-wrap">
-			<h1>Facebook</h1>
-  <form class="login-form" action="POST" action="#">
-    <label>
-      <input type="email" name="email" required placeholder="Email">
-    </label>
-    <label>
-      <input type="password" name="password" required placeholder="Password">
-    </label>
-    <input type="submit" value="Login">
-  </form>
-</section>
+		<div class="colm-form">
+            <div class="form-container">
+                    <input type="text" placeholder="Email address or phone number">
+                    <input type="password" placeholder="Password">
+                    <button class="btn-login">Login</button>
+            </div>
+		</div>
 
 	</body>
 
