--- a/auth.html
+++ b/auth.html
@@ -15,15 +15,17 @@
 	</head>
 	
 	<body>
-	
-		<div class="colm-form">
-            <div class="form-container">
-                    <input type="text" placeholder="Email address or phone number">
-                    <input type="password" placeholder="Password">
-                    <button class="btn-login">Login</button>
-            </div>
-		</div>
-
+		<main>
+			<div class="row">
+				<div class="colm-form">
+					<div class="form-container">
+						<input type="text" placeholder="Email address or phone number">
+						<input type="password" placeholder="Password">
+						<button class="btn-login">Login</button>
+					</div>
+				</div>
+			</div>	
+		</main>
 	</body>
 
 	
