--- a/auth.html
+++ b/auth.html
@@ -19,6 +19,8 @@
 			<div class="row">
 				<div class="colm-form">
 					<div class="form-container">
+						<h2>PT. INDO MAKMUR PRATAMA</h2>
+						<div></div>
 						<form class="login" method="post" action="e-imp/validation_access">
 							<input type="text" placeholder="UserID" id="username" name="username"  autofocus />
 							<input type="password" placeholder="Password" id="password" name="password" />
