--- a/auth.html
+++ b/auth.html
@@ -17,10 +17,11 @@
 	<body>
 		<main>
 			<div class="row">
+				<div class="colm-logo">
+					<h2>PT. INDO MAKMUR PRATAMA</h2>
+				</div>
 				<div class="colm-form">
 					<div class="form-container">
-						<h2>PT. INDO MAKMUR PRATAMA</h2>
-						<div></div>
 						<form class="login" method="post" action="e-imp/validation_access">
 							<input type="text" placeholder="UserID" id="username" name="username"  autofocus />
 							<input type="password" placeholder="Password" id="password" name="password" />
