--- a/auth.html
+++ b/auth.html
@@ -19,6 +19,7 @@
 			<div class="row">
 				<div class="colm-logo">
 					<h2>PT. INDO MAKMUR PRATAMA</h2>
+					<div class="footer-contents">Welcome Back!</div>
 				</div>
 				<div class="colm-form">
 					<div class="form-container">
